force-app/main/default/objects/Medical_Event_vod__c/fields/EPD_FR_MED_Event_Subtype__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Event_Subtype__c</fullName>
    <description>20-March-14-CV: Medical FR, created for requirement R-0895</description>
    <label>Event Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Repetitive</fullName>
            </value>
            <value>
                <fullName>STAFF</fullName>
            </value>
            <value>
                <fullName>STAFF Repetitive</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Snack</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Collation</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>NA / Other</fullName>
            </value>
            <value>
                <fullName>RP Repetitive</fullName>
            </value>
            <value>
                <fullName>Impromptu lunch</fullName>
            </value>
            <value>
                <fullName>Impromptu breakfast / snack</fullName>
            </value>
            <value>
                <fullName>Repetitive staff lunch</fullName>
            </value>
            <value>
                <fullName>Repetitive staff breakfast / snack</fullName>
            </value>
            <value>
                <fullName>Repetitive RP lunch / dinner without snack</fullName>
            </value>
            <value>
                <fullName>Repetitive RP lunch / dinner with snack</fullName>
            </value>
            <value>
                <fullName>Classic RP lunch / dinner without snack</fullName>
            </value>
            <value>
                <fullName>Classic RP lunch / dinner with snack</fullName>
            </value>
            <value>
                <fullName>Classic staff lunch</fullName>
            </value>
            <value>
                <fullName>Classic staff breakfast / snack</fullName>
            </value>
            <value>
                <fullName>Day Event</fullName>
            </value>
            <value>
                <fullName>Evening Event</fullName>
            </value>
            <value>
                <fullName>Lunch &amp; Learn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>