force-app/main/default/objects/Medical_Event_vod__c/fields/EPD_FR_MED_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>EPD_FR_MED_Organization_Name__c</fullName>
    <description>28-March-14-CV: Created to store the Organization that will receive the donation</description>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>