force-app/main/default/objects/Medical_Event_vod__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>This is a sample custom field for event type with no special processing.</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KOL</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Day Event</fullName>
            </value>
            <value>
                <fullName>Evening Event</fullName>
            </value>
            <value>
                <fullName>Congress Event</fullName>
            </value>
            <value>
                <fullName>No Budget Event</fullName>
            </value>
            <value>
                <fullName>MEGS</fullName>
            </value>
            <value>
                <fullName>Global Event</fullName>
            </value>
            <value>
                <fullName>RNT</fullName>
            </value>
            <value>
                <fullName>RPS</fullName>
            </value>
            <value>
                <fullName>Donations</fullName>
            </value>
            <value>
                <fullName>STAFF</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Masterclass</fullName>
            </value>
            <value>
                <fullName>Roundtable</fullName>
            </value>
            <value>
                <fullName>Commercial Advisory Board</fullName>
            </value>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Symposium</fullName>
            </value>
            <value>
                <fullName>Education Support</fullName>
            </value>
            <value>
                <fullName>Group Meeting/Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>