force-app/main/default/objects/Medical_Event_vod__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Sample custom field to store location of the event. There is no special processing on this field.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>