force-app/main/default/objects/Medical_Event_vod__c/fields/VIA_Requesting_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>VIA_Requesting_Party_Name__c</fullName>
    <label>Requesting Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>