force-app/main/default/objects/Medical_Event_vod__c/fields/VIA_Type__c.field-meta.xml
<CustomField>
    <fullName>VIA_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Advisory Board</fullName>
            </value>
            <value>
                <fullName>Master Class</fullName>
            </value>
            <value>
                <fullName>Roundtable</fullName>
            </value>
            <value>
                <fullName>Symposium</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>3rd Party Event Registration</fullName>
            </value>
            <value>
                <fullName>Lunch &amp; Learn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>