force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Award_vod.recordType-meta.xml
<RecordType>
    <fullName>Award_vod</fullName>
    <active>true</active>
    <description>Used for events where primary focus is awards</description>
    <label>Award_vod</label>
</RecordType>