force-app/main/default/objects/Medical_Event_vod__c/recordTypes/BE_Medical_Event.recordType-meta.xml
<RecordType>
    <fullName>BE_Medical_Event</fullName>
    <active>true</active>
    <label>BE Medical Event</label>
</RecordType>