force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Congress.recordType-meta.xml
<RecordType>
    <fullName>Congress</fullName>
    <active>true</active>
    <description>&quot;Congress&quot; type Medical Event for France on a base of Global Event</description>
    <label>Congress</label>
</RecordType>