force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Congress_vod.recordType-meta.xml
<RecordType>
    <fullName>Congress_vod</fullName>
    <active>true</active>
    <description>Congress</description>
    <label>Congress_vod</label>
</RecordType>