force-app/main/default/objects/Medical_Event_vod__c/recordTypes/EPD_FR_MED_Global_Event.recordType-meta.xml
<RecordType>
    <fullName>EPD_FR_MED_Global_Event</fullName>
    <active>true</active>
    <description>Separated layout for Global Events</description>
    <label>FR Global Event</label>
</RecordType>