force-app/main/default/objects/Medical_Event_vod__c/recordTypes/EPD_UK_Medical_Event.recordType-meta.xml
<RecordType>
    <fullName>EPD_UK_Medical_Event</fullName>
    <active>true</active>
    <description>20130720 CV - UK: Created to differentiate the UK Medical Events</description>
    <label>UK Medical Event</label>
</RecordType>