force-app/main/default/objects/Medical_Event_vod__c/recordTypes/ES_Completed_Hippo_Event.recordType-meta.xml
<RecordType>
    <fullName>ES_Completed_Hippo_Event</fullName>
    <active>true</active>
    <description>Used for events created from Hippo, where status is completed.</description>
    <label>ES Completed Hippo Event</label>
</RecordType>