force-app/main/default/objects/Medical_Event_vod__c/recordTypes/ES_Hippo_Event.recordType-meta.xml
<RecordType>
    <fullName>ES_Hippo_Event</fullName>
    <active>true</active>
    <description>Record Type for events created automatically from Hippo Events.</description>
    <label>ES Hippo Event</label>
</RecordType>