force-app/main/default/objects/Medical_Event_vod__c/recordTypes/FR_Completed_Hippo_Event.recordType-meta.xml
<RecordType>
    <fullName>FR_Completed_Hippo_Event</fullName>
    <active>true</active>
    <label>FR Completed Hippo Event</label>
</RecordType>