force-app/main/default/objects/Medical_Event_vod__c/recordTypes/FR_Donation.recordType-meta.xml
<RecordType>
    <fullName>FR_Donation</fullName>
    <active>true</active>
    <description>Separated layout for Donations</description>
    <label>FR Donation</label>
</RecordType>