force-app/main/default/objects/Medical_Event_vod__c/recordTypes/FR_Hippo_Event.recordType-meta.xml
<RecordType>
    <fullName>FR_Hippo_Event</fullName>
    <active>true</active>
    <label>FR Hippo Event</label>
</RecordType>