force-app/main/default/objects/Medical_Event_vod__c/recordTypes/FR_Medical_Event.recordType-meta.xml
<RecordType>
    <fullName>FR_Medical_Event</fullName>
    <active>true</active>
    <description>RPS and Opportunity Medical Events</description>
    <label>FR Medical Event</label>
</RecordType>