force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Investigator_Meeting_vod.recordType-meta.xml
<RecordType>
    <fullName>Investigator_Meeting_vod</fullName>
    <active>true</active>
    <description>Investigator Meeting</description>
    <label>Investigator_Meeting_vod</label>
</RecordType>