force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Medical_event.recordType-meta.xml
<RecordType>
    <fullName>Medical_event</fullName>
    <active>true</active>
    <description>Event Record Type created for Medical Sales</description>
    <label>Medical event</label>
</RecordType>