force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Medical_Event_vod.recordType-meta.xml
<RecordType>
    <fullName>Medical_Event_vod</fullName>
    <active>true</active>
    <description>Standard record type for Medical Events</description>
    <label>Medical_Event_vod</label>
</RecordType>