force-app/main/default/objects/Medical_Event_vod__c/recordTypes/MYL_FR_Pharma_Medical_Event.recordType-meta.xml
<RecordType>
    <fullName>MYL_FR_Pharma_Medical_Event</fullName>
    <active>true</active>
    <description>New medical event record type for Pharmacy channel users</description>
    <label>FR Pharma Medical Event</label>
</RecordType>