force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Pharmacy_event.recordType-meta.xml
<RecordType>
    <fullName>Pharmacy_event</fullName>
    <active>true</active>
    <description>Record Type created for Pharmacies</description>
    <label>Pharmacy event</label>
</RecordType>