force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Round_Table_vod.recordType-meta.xml
<RecordType>
    <fullName>Round_Table_vod</fullName>
    <active>true</active>
    <description>Round Table</description>
    <label>Round_Table_vod</label>
</RecordType>