force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Satellite_Symposium_vod.recordType-meta.xml
<RecordType>
    <fullName>Satellite_Symposium_vod</fullName>
    <active>true</active>
    <description>Used for remote symposium events</description>
    <label>Satellite_Symposium_vod</label>
</RecordType>