force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Speaker_Program_vod.recordType-meta.xml
<RecordType>
    <fullName>Speaker_Program_vod</fullName>
    <active>true</active>
    <description>Speaker Program</description>
    <label>Speaker_Program_vod</label>
</RecordType>