force-app/main/default/objects/Medical_Event_vod__c/recordTypes/UK_Hippo_Event.recordType-meta.xml
<RecordType>
    <fullName>UK_Hippo_Event</fullName>
    <active>true</active>
    <label>UK Hippo Event</label>
</RecordType>