force-app/main/default/objects/Medical_Event_vod__c/recordTypes/VIA_Educational_materials_medically_useful_items_and_gifts_of_negligible_value.recordType-meta.xml
<RecordType>
    <fullName>VIA_Educational_materials_medically_useful_items_and_gifts_of_negligible_value</fullName>
    <active>true</active>
    <label>Educational materials, medically useful items and gifts of negligible value</label>
</RecordType>