force-app/main/default/objects/Medical_Event_vod__c/recordTypes/VIA_GR_Medical_Event.recordType-meta.xml
<RecordType>
    <fullName>VIA_GR_Medical_Event</fullName>
    <active>true</active>
    <description>SFA Integration -  For Greece Medical events</description>
    <label>GR Medical Event</label>
</RecordType>