force-app/main/default/objects/Medical_Event_vod__c/recordTypes/VIA_UK_Completed_Medical_Event.recordType-meta.xml
<RecordType>
    <fullName>VIA_UK_Completed_Medical_Event</fullName>
    <active>true</active>
    <description>UK Completed Medical Events for Read-Only Profile</description>
    <label>UK Completed Medical Event</label>
</RecordType>