force-app/main/default/objects/Medical_Event_vod__c/recordTypes/Workshop_vod.recordType-meta.xml
<RecordType>
    <fullName>Workshop_vod</fullName>
    <active>true</active>
    <description>Used for workshop events</description>
    <label>Workshop_vod</label>
</RecordType>